OCD-1778: Fix issues found with checkstyle & findbugs